syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";


/* Assigned toa site */
message NodeAssignedEvent{
    string nodeId = 1;
    string name = 2;
    string type = 3;
    string network = 4;
    string site = 5;
    bool allocated = 6;
}

/*Release from site */
message NodeReleaseEvent{
    string nodeId = 1;
    string name = 2;
    string type = 3;
    string network = 4;
    string site = 5;
    bool allocated = 6;
}
